--- a/Object_Localization_with_TensorFlow_Starter.ipynb
+++ b/Object_Localization_with_TensorFlow_Starter.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Object Localization with TensorFlow - Starter.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -27,6 +28,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gfxluffy/Object-Localization-with-Tensorflow/blob/main/Object_Localization_with_TensorFlow_Starter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
